<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="25dp"
    tools:context=".MainActivity">
        <TextView
            android:id="@+id/tv_first_name"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/et_first_name"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/tv_first_name"
            android:layout_marginStart="16dp"/>

        <EditText
            android:id="@+id/et_first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/write_name"
            android:inputType="textPersonName"
            app:layout_constraintLeft_toRightOf="@+id/tv_first_name"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_last_name"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/et_last_name"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/tv_last_name"
            android:layout_marginStart="16dp"/>

        <EditText
            android:id="@+id/et_last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
           app:layout_constraintTop_toBottomOf="@id/et_first_name"
            app:layout_constraintLeft_toRightOf="@id/tv_last_name"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="16dp"
            android:hint ="@string/write_surname"/>

        <TextView
            android:id="@+id/tv_oceny_count"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/et_liczba_ocen"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/tv_number_grades"
            android:layout_marginStart="16dp"/>

        <EditText
            android:id="@+id/et_liczba_ocen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginEnd="15dp"
            app:layout_constraintTop_toBottomOf="@id/et_last_name"
            app:layout_constraintLeft_toRightOf="@id/tv_oceny_count"
            app:layout_constraintRight_toRightOf="parent"
            android:hint="@string/write_grade"/>

        <Button
            android:id="@+id/btn_oceny"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/main_btn"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@id/et_liczba_ocen"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/button"/>
        <TextView
            android:id="@+id/avg_oceny"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btn_oceny"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="16dp"
            android:text="@string/avg"
            android:layout_marginTop="10dp"
            android:visibility="invisible"
            />

        <Button
            android:id="@+id/wynik_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/result_btn"
            android:visibility="invisible"
            android:backgroundTint="@color/button"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/btn_oceny"/>

</androidx.constraintlayout.widget.ConstraintLayout>